<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gobang</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="undo">undo</string>
    <string name="back">back</string>
    <string name="touch_begin">Touch the screen to begin</string>
    <string name="quit_confirm">Are you sure to quit?</string>
    <string name="player">young man</string>
    <string name="quit_yes">Yes</string>
    <string name="quit_no">No</string>
    <string name="go_on_playing">Go On Playing!</string>
    <string name="undo_comfirm">Are you sure to undo?</string>
    <string name="bad_boy">You are a bad boy!</string>
    <string name="good_boy">You did the right thing!</string>
    <string name="return_confirm">Are you sure to back?</string>
    <string name="win_black">the black is win!</string>
    <string name="win_white">the white is win!</string>
    <string name="youlost">you are the lost!</string>
    <string name="youwin">you are the winner!</string>
    <string name="gameover">Gome Over</string>
    <string name="watchboard">Look or Back</string>
    <string name="giveup">Give up</string>
    <string name="replay">Replay</string>
    <string name="replay_confirm">Are you sure to play again?</string>
    <string name="replay_tip">The game is restarted!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="welcome">Welcome</string>
    <string name="hum_hum">Human VS Human</string>
    <string name="hum_com">Human VS Android</string>
    <string name="hum_hum_blue">Use Bluetooth</string>
    <string name="exit">Exit</string>
    <string name="select">Please Select a Mode:</string>
    <string name="select_device">select a device to connect</string>
	<string name="title_paired_devices">Paired Devices</string>
	<string name="title_other_devices">Other Available Devices</string>
    <string name="button_open_setting">Pair New Devices</string>
    <string name="scanning">scanning for devices</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="which_is_connecting">is connectting</string>
    <string name="reselect_device">error,please select again</string>
    <string name="unable_connect">Unable to connect device</string>
    <string name="connection_lost">Device connection was lost</string>
    <string name="bluetooth_unavailable">Bluetooth is not available</string>
	<string name="not_connected">You are not connected to a device</string>
    <string name="title_connected_to">connected to</string>
	<string name="title_connecting">connecting&#8230;</string>
	<string name="title_not_connected">No connection</string>
	<string name="ask_undo_title">ask to undo</string>
	<string name="ask_undo_message">the other side ask to undo,agree?</string>
	<string name="agree">Agree</string>
	<string name="disagree">Disagree</string>
	<string name="agree_toast">The other side agree to undo</string>
	<string name="disagree_toast">The other side disgree to undo</string>
    <string name="quit_toast">The other side is not playing</string>
    <string name="wait_agree">Waiting for agreement</string>
    <string name="first_toast">please take the first step</string>
    <string name="second_toast">please wait the first step</string>
    <string name="set_first_ti">Set First</string>
    <string name="is_you_first">Set you go First?</string>
	<string name="set_other_first">You have set the other go first</string>
	<string name="music_on">Turn on music</string>
	<string name="music_off">Turn off music</string>
	<string name="sound_on">Turn on sound</string>
	<string name="sound_off">Turn off sound</string>
	<string name="main_menu_button">menu button</string>
	<string name="sound_tip">you can press MENU to unable sounds</string>
	<string name="press_again">press again to quit game</string>
	<string name="still_run">The game is still running</string>
	<string name="select_level">please select the level</string>
	<string name="easy">Easy</string>
	<string name="normal">Normal</string>
	<string name="hard">Hard</string>
	<string name="power">Power By doufu3344</string>
</resources>