<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_board" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/select"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_hum_com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/hum_com"
        android:width="200dp" />

    <Button
        android:id="@+id/btn_hum_bluet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_hum_com"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/hum_hum_blue"
        android:width="200dp" />

    <Button
        android:id="@+id/btn_hum_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_hum_bluet"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/hum_hum"
        android:width="200dp" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_hum_two"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/exit"
            android:width="200dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/power"
            android:textSize="18sp" />
    
</RelativeLayout>