<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:background="@drawable/bg_board" >

    <com.df.chessboard.ChessboardView
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#2Fff7700" />

    <Button
        android:id="@+id/undo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view1"
        android:layout_alignParentBottom="true"
        android:text="@string/undo" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/view1"
        android:text="@string/back" />

    <com.df.chessboard.TipView
        android:id="@+id/tipview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:layout_centerHorizontal="true"
        android:background="#1F0000FF" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:singleLine="true"
        android:textColor = "#000000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:text="@string/touch_begin"/>
    
     <Button
        android:id="@+id/replay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/replay" />

     <TextView
         android:id="@+id/blacktime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/tipview"
         android:layout_below="@+id/tipview"
         android:text=""
         android:textAppearance="?android:attr/textAppearanceMedium" />

     <TextView
         android:id="@+id/whitetime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/tipview"
         android:layout_below="@+id/tipview"
         android:text=""
         android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>